tests/ui/internal_entity.stderr
error[E0603]: module `entity` is private
 --> tests/ui/internal_entity.rs:1:13
  |
1 | use moirai::entity;
  |             ^^^^^^ private module
  |
note: the module `entity` is defined here
 --> src/lib.rs
  |
  | mod entity;
  | ^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/internal_entity.rs:1:20
  |
1 | use moirai::entity;
  |                    ^ consider adding a `main` function to `$DIR/tests/ui/internal_entity.rs`
